apps/groku/LokiGrafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana
  namespace: loki
  annotations:
    cert-manager.io/cluster-issuer: "local-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.localhost
      secretName: grafana-local-tls
  rules:
    - host: grafana.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
